I know I shouldn't write a generic commit message

--- a/styles.css
+++ b/styles.css
@@ -41,3 +41,32 @@ body {
     max-width: 960px;
     margin: auto;
 }
+
+section[data-container] {
+    display: none;
+}
+
+section[data-container].active {
+    display: block;
+}
+
+.residuos-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 2rem;
+}
+
+.residuo {
+    cursor: pointer;
+    padding: 2rem;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.residuo.active {
+    background-color: black;
+    color: #fff;
+}
