--- a/styles.css
+++ b/styles.css
@@ -42,11 +42,11 @@ body {
     margin: auto;
 }
 
-section[data-container] {
+section[data-secao] {
     display: none;
 }
 
-section[data-container].active {
+section[data-secao].active {
     display: block;
 }
 
