--- a/styles.css
+++ b/styles.css
@@ -42,31 +42,43 @@ body {
     margin: auto;
 }
 
-section[data-secao] {
+.main {
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.main .container {
+    display: flex;
+}
+
+[data-step] {
+    opacity: 0;
     display: none;
 }
 
-section[data-secao].active {
+[data-step].active,
+[data-step]:first-child {
+    opacity: 1;
     display: block;
+    flex: 1 1 70%;
 }
 
-.residuos-grid {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 2rem;
+[data-aside] {
+    flex: 0 1 30%;
 }
 
-.residuo {
-    cursor: pointer;
-    padding: 2rem;
-    background: #fff;
-    display: flex;
+
+a {
+    display: inline-flex;
     align-items: center;
     justify-content: center;
-    text-align: center;
+    padding: 2rem;
+    background: #232323;
+    color: #fff;
+    text-decoration: none;
 }
 
-.residuo.active {
-    background-color: black;
-    color: #fff;
+a img {
+    display: none;
 }
