--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,8 @@ body {
     display: flex;
 }
 
-[data-section] {
+[data-section],
+[data-state-residuo] {
     opacity: 0;
     display: none;
 }
@@ -61,6 +62,11 @@ body {
     opacity: 1;
     display: block;
     flex: 1 1 70%;
+}
+
+[data-state-residuo].active {
+    opacity: 1;
+    display: inline-block;
 }
 
 [data-aside] {
