--- a/styles.css
+++ b/styles.css
@@ -42,48 +42,10 @@ body {
     margin: auto;
 }
 
-.main {
-    height: 100%;
-    display: flex;
-    align-items: center;
-}
-
-.main .container {
-    display: flex;
-}
-
-[data-section],
-[data-state-residuo] {
-    opacity: 0;
+section {
     display: none;
 }
 
-[data-section].active {
-    opacity: 1;
+section.active {
     display: block;
-    flex: 1 1 70%;
-}
-
-[data-state-residuo].active {
-    opacity: 1;
-    display: inline-block;
-}
-
-[data-aside] {
-    flex: 0 1 30%;
-}
-
-
-a {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    padding: 2rem;
-    background: #232323;
-    color: #fff;
-    text-decoration: none;
-}
-
-a img {
-    display: none;
 }
