--- a/styles.css
+++ b/styles.css
@@ -15,12 +15,12 @@ section.active {
 }
 
 .container .content {
-    flex: 3 1 auto;
+    flex: 10 1 auto;
     margin-right: 2rem !important;
 }
 
 .container aside {
-    flex: 1 0 200px;
+    flex: 1 0 170px;
 }
 
 section h2 {
@@ -54,6 +54,9 @@ section h2 {
 [data-section="calculo-montante"] .content h3 {
     border-bottom: 1px solid #ccc;
     padding-bottom: .85rem;
+}
+[data-section="informacoes-pessoais"] .content h3 {
+    font-size: 1rem;
 }
 
 [data-section="calculo-montante"] .content > div {
@@ -309,7 +312,7 @@ input[name=frequencia] + * {
     justify-content: center;
     border: 1px solid #262E60;
     transition: all 0.3s ease-in-out;
-    max-width: 140px;
+    width: 100%;
 }
 
 [data-card] img {
@@ -322,7 +325,8 @@ input[name=frequencia] + * {
     font-size: .85rem;
     font-weight: 500;
     word-wrap: break-word;
-    white-space: normal
+    white-space: normal;
+    word-break: break-all;
 }
 
 [data-card]:hover {
@@ -335,12 +339,8 @@ input[name=frequencia] + * {
 }
 
 aside {
-    flex: 0 0 auto;
     display: flex;
     flex-direction: column;
-    height: 100%;
-    max-height: 450px;
-    width: auto;
 }
 
 aside h3:not(:first-child) {
@@ -403,4 +403,88 @@ aside p {
     display: inline-block;
     margin-right: .3rem;
     font-size: 1rem;
+}
+
+.progress[data-value] {
+    margin: 0 0 2rem;
+    display: block;
+    height: 2.1rem;
+    width: 30rem;
+    border-radius: 100px;
+    border: 2px solid #262E60;
+}
+
+.progress[data-value] .progress__value {
+    background: #F4C000;
+    border-top-left-radius: 100px;
+    border-bottom-left-radius: 100px;
+    height: 100%;
+}
+
+.progress[data-value="0"] .progress__value {
+    width: 0;
+}
+.progress[data-value="1"] .progress__value {
+    width: calc(100% / 6);
+}
+.progress[data-value="2"] .progress__value {
+    width: calc(100% / 6 * 2);
+}
+.progress[data-value="3"] .progress__value {
+    width: calc(100% / 6 * 3);
+}
+.progress[data-value="4"] .progress__value {
+    width: calc(100% / 6 * 4);
+}
+.progress[data-value="5"] .progress__value {
+    width: calc(100% / 6 * 5);
+}
+.progress[data-value="6"] .progress__value {
+    width: 100%;
+    border-top-right-radius: 100px;
+    border-bottom-right-radius: 100px;
+}
+
+aside ul li {
+    list-style: circle;
+}
+
+aside ul li::before {
+    display: none;
+}
+
+.loading {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.loading__message::before {
+    content: '';
+    display: block;
+    background: #fff;
+    border-radius: 100%;
+    width: 3rem;
+    height: 3rem;
+    border: 5px solid rgba(244, 191, 0, 0.23);
+    /* border-top: 5px solid #262E60; */
+    border-bottom: 5px solid #262e60;
+    animation: spin 2s linear infinite;
+    text-align: center;
+    margin: 1rem auto;
+}
+
+.loading__message {
+    margin: auto !important;
+    text-align: center;
+    color: #262E60;
+    font-size: .85rem;
+    /* color: #F4C000; */
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
