--- a/styles.css
+++ b/styles.css
@@ -294,8 +294,56 @@ input[name=frequencia] + * {
 
 [data-cards] {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(4, calc((100% - 2rem) / 4));
     gap: 1rem;
+}
+
+@media (max-width: 1366px) {
+    [data-cards] {
+        grid-template-columns: repeat(3, calc((100% - 2rem) / 3));
+    }
+}
+
+@media (max-width: 1009px) {
+    [data-cards] {
+        grid-template-columns: repeat(2, calc((100% - 2rem) / 2));
+    }
+}
+
+@media (max-width: 940px) {
+    [data-cards] {
+        grid-template-columns: repeat(3, calc((100% - 2rem) / 3));
+    }
+}
+
+@media (max-width: 680px) {
+    .container {
+        flex-direction: column;
+    }
+
+    .container .content {
+        margin-right: 0 !important;
+        margin-bottom: 2rem;
+    }
+
+    [data-aside] {
+        margin-bottom: 2rem;
+    }
+}
+
+@media (max-width: 534px) {
+    [data-cards] {
+        grid-template-columns: repeat(2, calc((100% - 2rem) / 2));
+    }
+}
+
+@media (max-width: 390px) {
+    .container {
+        justify-content: center;
+    }
+    [data-cards] {
+        grid-template-columns: 1fr;
+    }
 }
 
 [data-card] {
@@ -324,9 +372,6 @@ input[name=frequencia] + * {
     color: #fff !important;
     font-size: .85rem;
     font-weight: 500;
-    word-wrap: break-word;
-    white-space: normal;
-    word-break: break-all;
 }
 
 [data-card]:hover {
@@ -407,42 +452,32 @@ aside p {
 
 .progress[data-value] {
     margin: 0 0 2rem;
-    display: block;
+    display: grid;
     height: 2.1rem;
-    width: 30rem;
+    max-width: 27rem;
     border-radius: 100px;
     border: 2px solid #262E60;
+    grid-auto-columns: 1fr;
+    grid-auto-flow: column;
 }
 
 .progress[data-value] .progress__value {
-    background: #F4C000;
-    border-top-left-radius: 100px;
-    border-bottom-left-radius: 100px;
     height: 100%;
+    border-right: 1px dashed #262E60;
 }
 
-.progress[data-value="0"] .progress__value {
-    width: 0;
+.progress[data-value] .progress__value.active {
+    background: #F4C000;
 }
-.progress[data-value="1"] .progress__value {
-    width: calc(100% / 6);
+
+.progress__value:first-child {
+    border-top-left-radius: 100px;
+    border-bottom-left-radius: 100px;
 }
-.progress[data-value="2"] .progress__value {
-    width: calc(100% / 6 * 2);
-}
-.progress[data-value="3"] .progress__value {
-    width: calc(100% / 6 * 3);
-}
-.progress[data-value="4"] .progress__value {
-    width: calc(100% / 6 * 4);
-}
-.progress[data-value="5"] .progress__value {
-    width: calc(100% / 6 * 5);
-}
-.progress[data-value="6"] .progress__value {
-    width: 100%;
+.progress__value:last-child {
     border-top-right-radius: 100px;
     border-bottom-right-radius: 100px;
+    border-right: 0 !important;
 }
 
 aside ul li {
@@ -481,10 +516,17 @@ aside ul li::before {
     text-align: center;
     color: #262E60;
     font-size: .85rem;
-    /* color: #F4C000; */
 }
 
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+}
+
+.cards-description strong {
+    color: #262E60;
+}
+
+.cards-description {
+    margin-top: 0;
 }
