--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,28 @@
 form {
     margin-bottom: 2rem;
+    position: relative;
 }
 
 section {
+    pointer-events: none;
     display: none;
 }
 
 section.active {
+    pointer-events: all;
     display: block;
+    animation: flip-in-hor-bottom 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+@keyframes flip-in-hor-bottom {
+    0% {
+      transform: rotateX(80deg);
+      opacity: 0;
+    }
+    100% {
+      transform: rotateX(0);
+      opacity: 1;
+    }
 }
 
 .container {
