--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,7 @@ input[name=frequencia] + * {
     flex-flow: 0 1 auto;
 }
 
-.iq__title::after {
+/* .iq__title::after {
     content: '\f0dd';
     display: inline-block;
     font-family: "Font Awesome 5 Free";
@@ -170,7 +170,7 @@ input[name=frequencia] + * {
     position: absolute;
     right: 0;
     margin-right: 1rem;
-}
+} */
 
 .iq-dropdown {
     width: 13rem;
@@ -466,6 +466,18 @@ aside p {
     font-size: 1rem;
 }
 
+.title-wrapper {
+    display: flex !important;
+    align-items: center;
+    /* justify-content: space-between; */
+    margin-bottom: 1rem;
+}
+
+.title-wrapper h2 {
+    margin-bottom: 0 !important;
+    margin-right: 1rem;
+}
+
 .progress {
     margin: 0 0 2rem;
     display: flex;
@@ -537,18 +549,17 @@ aside p {
 }
 
 .progress .next.active:hover {
-    fill: #F4C000;
     cursor: pointer;
     fill: #262E60;
     transform: rotateY(180deg) scale(1.1);
 }
 
-.progress .clear {
+.clear {
     color: #F4C000;
     font-weight: 400;
     text-transform: uppercase;
     font-size: .85rem;
-    padding: .5rem 1rem;
+    /* padding: .5rem 1rem; */
     cursor: pointer;
 }
 
